--- a/frontend/src/assets/scss/dashboard/_overlayWindow.scss
+++ b/frontend/src/assets/scss/dashboard/_overlayWindow.scss
@@ -337,7 +337,8 @@
         }
       }
 
-      .error {
+      div.error {
+        margin: 0 0 12px 0;
         width: 82%;
       }
     }
